Fixing Gap

--- a/css/style-vers12.css
+++ b/css/style-vers12.css
@@ -298,11 +298,14 @@ max-width: 760px;
  
             
         
-        footer {
+        footer p {
             
-            border-top: 1px solid #d5d5d5;
+/*            border-top: 1px solid #d5d5d5;*/
+            padding: 0;
+/*
             padding: 20px;
             font-size: 0.707em;
+*/
             
         }
 
